# cookie-py-template

./: README.md  cookiecutter.json
.github/workflows/: python-app.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: LICENSE  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst  modules.rst  {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/src/python_pkg_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: example_function.py  main.py
{{cookiecutter.project_slug}}/tests/: test_example_function.py  test_main.py
