[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
dependencies = []
[project.optional-dependencies]
dev = ["{{cookiecutter.project_slug}}[test]", "{{cookiecutter.project_slug}}[docs]", "tox"]
test = ["pytest", "pytest-cov", "coverage", "mypy", "ruff"]
docs = ["sphinx", "myst-parser", "sphinx_rtd_theme"]

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
  "{{cookiecutter.project_slug}}*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["T20", "D104", "D211", "D213"]
select = ["ALL"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.messages_control]
max-line-length = 120
disable = """
    missing-function-docstring,
    missing-module-docstring
    """
# generated-members = """
#     torch.*
#     numpy.*
#     """

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov={{cookiecutter.project_slug}} --cov-branch --cov-report html:reports/html --cov-report xml:reports/coverage.xml --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "def __repr__",
  "def __str__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.coverage.run]
branch = true
data_file = "reports/.coverage"

[tool.mypy]
strict = true
warn_return_any = false
